# app/recipient/recipient.model.js
@@ -65,21 +65,26 @@ const Recipient = orm.model(
       sort,
       direction = 'ASC',
     }) {
-      let query = this.query();
-      if (search) {
-        query = query
-          .where('firstname', 'LIKE', `%${search}%`)
-          .orWhere('lastname', 'LIKE', `%${search}%`)
-          .orWhere('email', 'LIKE', `%${search}%`)
-          .orWhere('card_number', 'LIKE', `%${search}%`);
-      }
-      if (status) {
-        query = query.where('status', '=', status);
-      }
-      if (sort) {
-        query = query.orderBy(_.snakeCase(sort), direction);
-      }
-      return query.limit(pageSize).offset(pageSize * (page - 1));
+      return this.query((queryBuilder) => {
+        let query = queryBuilder;
+        if (search) {
+          query = query
+            .where('firstname', 'LIKE', `%${search}%`)
+            .orWhere('lastname', 'LIKE', `%${search}%`)
+            .orWhere('email', 'LIKE', `%${search}%`)
+            .orWhere('card_number', 'LIKE', `%${search}%`);
+        }
+        if (status) {
+          query = query.where('status', '=', status);
+        }
+        if (sort) {
+          query = query.orderBy(_.snakeCase(sort), direction);
+        }
+        return query;
+      }).fetchPage({
+        page,
+        pageSize,
+      });
     },
   },
 );
