# app/recipient/recipient.routes.js
@@ -28,7 +28,10 @@ routes.get('/', authorize(), async (req, res) => {
     sort: req.query.sort,
     direction: req.query.dir,
   });
-  res.json(recipients);
+  res.json({
+    models: recipients.models,
+    pagination: recipients.pagination,
+  });
 });
 
 routes.get(
